# iAAA-3rd-Contest

./: .gitignore  BCT.md  README.md  Speaker.md  pyproject.toml  sample.audio.aubmission.csv  sample.bct.submission.csv  submission.py
